--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "@userfront/toolkit": "^1.0.11-canary.1",
+    "axios": "^1.8.4",
+    "formik": "^2.4.6",
+    "masonry-layout": "^4.2.2",
+    "prop-types": "^15.8.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-masonry-css": "^1.0.16",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.0",
+    "sass": "^1.86.3",
+    "scss": "^0.2.4",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
