--- a/client/package.json
+++ b/client/package.json
@@ -16,16 +16,19 @@
     "@mui/material": "^7.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@userfront/toolkit": "^1.0.11-canary.1",
+    "antd": "^5.25.1",
     "axios": "^1.8.4",
     "formik": "^2.4.6",
     "masonry-layout": "^4.2.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
     "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
+    "react-toastify": "^11.0.5",
     "sass": "^1.86.3",
     "scss": "^0.2.4",
     "yup": "^1.6.1"
