--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,12 @@
     "antd": "^5.25.1",
     "axios": "^1.8.4",
     "formik": "^2.4.6",
+    "framer-motion": "^12.12.1",
     "masonry-layout": "^4.2.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-masonry-css": "^1.0.16",
